# homework

./: .gitignore
homework1/: BigInteger.cpp  BigInteger.h  Main.cpp  task.txt
homework2/: .gitignore  CMakeLists.txt  Card.cpp  Card.h  Dealer.h  Deck.cpp  Deck.h  Game.cpp  Game.h  HumanPlayer.cpp  HumanPlayer.h  Main.cpp  Makefile  OpenCard.cpp  OpenCard.h  Player.cpp  Player.h  PlayerData.cpp  PlayerData.h  TestRules.hpp
homework2/include/: Card.h  Deck.h  Game.h  HumanPlayer.h  InvalidAccessException.h  Player.h  PlayerData.h  Rules.h
homework2/src/: CMakeLists.txt  Card.cpp  Deck.cpp  Game.cpp  HumanPlayer.cpp  Main.cpp  Makefile  PlayerData.cpp  Rules.cpp  cmake_install.cmake
homework2/test/: CMakeLists.txt  CardTest.cpp  PlayerDataTest.cpp  RulesTest.cpp  SimpleTest.cpp  TestDeck.cpp
homework3/: CMakeLists.txt
homework3/include/: Graph.h
homework3/src/: CMakeLists.txt  main.cpp
homework3/test/: CMakeLists.txt
homework3/test/gtest-1.6.0/include/gtest/internal/: gtest-internal.h
